AuthBlockService upgrade #5731